# projet-ouah

./: README.md  Teaser and description for elektor lab.txt
documentation/: TZ.txt  bom.xls  ouah-empreintes.txt  passe-bande-butterworth-77500Hz.ASC  passe-bande-butterworth-77500Hz.asy  passe-bande-butterworth-77500Hz.op.raw  passe-bande-butterworth-77500Hz.raw  passe-bas-80kHz.ASC  passe-haut-70kHz.ASC
fpga/: .ng_run_manager.ini  Ouah.rdf  Ouah_tcl.html  ouah.pdc  reportview.xml
fpga/OuahSim/: OuahSim.mdo  OuahSim.mpf  OuahSim.sort  OuahSim.tops  sim_para.tcl  source_files.lst  transcript  vsim.wlf
fpga/Ouah_tcr.dir/: pn230814034642.tcr  pn230814050725.tcr  pn230814140014.tcr  pn230828073150.tcr  pn230831185952.tcr  pn230831204215.tcr  pn230902222916.tcr  pn230903043213.tcr  pn230905041126.tcr  pn230908090038.tcr
fpga/Ouah_v2/: .build_status  Ouah_Ouah_v2.arearep  Ouah_Ouah_v2.bgn  Ouah_Ouah_v2.mrp  Ouah_Ouah_v2.pad  Ouah_Ouah_v2.par  Ouah_Ouah_v2.twr  Ouah_Ouah_v2.twr.html  Ouah_Ouah_v2.vm  Ouah_Ouah_v2_bgn.html  Ouah_Ouah_v2_css.twr.html  Ouah_Ouah_v2_lattice.synproj  Ouah_Ouah_v2_lseres.html  Ouah_Ouah_v2_map.hrr  Ouah_Ouah_v2_map.udb  Ouah_Ouah_v2_map_mapres.html  Ouah_Ouah_v2_mrp.html  (+15 more)
kicad/: ERC.txt  Ehrlich_Lib.kicad_sym  Ouah.csv  Ouah.kicad_pcb  Ouah.kicad_prl  Ouah.kicad_pro  Ouah.kicad_sch  Ouah.xml  Ouah_big.kicad_pcb  Ouah_big.kicad_pro  Ouah_max211.kicad_pcb  Ouah_max211.kicad_prl  Ouah_max211.kicad_pro  Ouah_max211.kicad_sch  fp-info-cache  rapport-equipotentielles.csv  upduino31-v2.kicad_sym
software/pico_w/sources/pico_w/: CMakeLists.txt
(+355 files in other folders)
